# gzhu-score-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_smtp.py
.github/workflows/: check.yml  query.yml  telegram-poll.yml
scripts/: admin.py  menu.py  test_smtp.py
src/: __init__.py  admin_api.py  admin_cli.py  config.py  device_info.py  email_notifier.py  email_status_tracker.py  gzhu_login.py  ip_address.py  logger.py  main.py  score_parser.py  telegram_bot.py  templates.py
workers/telegram-webhook/: index.js  wrangler.toml
